usecase-2 dbutils.fs completed

--- a/1_Usecase_Explore_Notebooks_Magic_commands.ipynb
+++ b/1_Usecase_Explore_Notebooks_Magic_commands.ipynb
@@ -18,10 +18,12 @@
    "source": [
     "# Learn Databricks PySpark SQL\n",
     "It is built on an open-source foundation, using Apache Spark as its core technology, and is designed to combine the best features of data lakes and data warehouses in a lakehouse architecture.<br>\n",
-    "## **Student** \n",
-    "<span style=\"color:blue; font-weight:bold\">Vivekananda Bharathi</span>\n",
+    "## **Good Day!** <br>\n",
+    "$${\\color{red}Vivekananda Bharathi}$$\n",
+    "### **Belongs to WD36 Batch** <br>\n",
+    "#### **IN**<br>\n",
     "![](https://fplogoimages.withfloats.com/actual/68009c3a43430aff8a30419d.png)<br>\n",
-    "_Chennai_\n"
+    "$${\\color{green}Chennai}$$\n"
    ]
   },
   {
@@ -212,7 +214,7 @@
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "Usecase_Explore_Notebooks_Magic_commands",
+   "notebookName": "1_Usecase_Explore_Notebooks_Magic_commands",
    "widgets": {}
   },
   "language_info": {
